--- a/resources/sass/components/basic/_select.scss
+++ b/resources/sass/components/basic/_select.scss
@@ -1,6 +1,6 @@
 .bootstrap-select {
-    background-color: #fff;
-    border-radius: 10px;
+    //background-color: #fff;
+    //border-radius: 10px;
 
     &.show {
         .dropdown-toggle {
