--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -162,7 +162,7 @@ select::-ms-expand {
         }
     }
 
-    label:last-child {
+    > label:last-child {
         display: flex;
         align-items: center;
         cursor: pointer;
