--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -313,7 +313,7 @@
             padding: 5px 15px 5px 40px;
             display: inline-block;
             text-align: left;
-            //max-width: 117px;
+            max-width: 117px;
 
             &:before {
                 content: '';
