--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -214,7 +214,7 @@ textarea {
     border-radius: 10px;
     border: 2px solid $darkestWhite;
     background-color: #ffffff;
-
+    padding: 1rem;
 
     @include placeholder {
         color: $darkerGrey;
