--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -71,7 +71,11 @@ select::-ms-expand {
 
     label {
         text-align: left;
-        @include font-standard;
+        color: $darkerGrey;
+        @extend .font-semibold;
+        font-size: 18px;
+        letter-spacing: -0.9px;
+        line-height: 19px;
     }
 
     select {
@@ -150,7 +154,7 @@ select::-ms-expand {
         left: -200vw;
 
         &:checked {
-            +label:last-child {
+            + label:last-child {
                 font-weight: 600;
 
                 &:before {
