--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -296,7 +296,7 @@
         font-size: 14px;
         font-weight: 700;
         letter-spacing: -0.7px;
-        //line-height: 19.2px;
+        cursor: pointer;
     }
 
     .nhs-hospital,
