Fix bug with datepicker not updating validation

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -9,6 +9,7 @@ $headings-font-weight: normal; // font is bold, so normal is standard bold
 //$line-height-base: 1.6;
 
 // Colors
+$enable-gradients: true;
 $indigo: #6574cd;
 $purple: #9561e2;
 $red: #e3342f;
