Tidy up comments etc

--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -238,3 +238,12 @@ textarea {
 .invalid-feedback {
     margin-top: 0;
 }
+
+// Stop the body scrolling when bootstrap selects are open
+.select-open {
+    overflow: hidden;
+    
+    .dropdown-menu.show {
+        z-index: 1050;
+    }
+}
