--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -41,6 +41,7 @@ $sectionBeige: #ececec;
 $darkBlue: #1b71f3;
 $hotpink: #ed0373;
 $caretBlack: #040202;
+$bannerMaskGreen: #19a2a1;
 
 // Borders
 $borderVideo: #707070;
