--- a/resources/sass/components/basic/_helpLink.scss
+++ b/resources/sass/components/basic/_helpLink.scss
@@ -28,7 +28,7 @@
     .box {
         .help-link {
             right: 60px;
-            top: 20px;
+            @include v-c;
         }
     }
 }
