--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -1,10 +1,4 @@
 // Popover
-
-.popover {
-
-}
-
-
 .popover {
     /* Style for "For privat" */
     color: $black;
@@ -103,6 +97,15 @@
         }
     }
 
+    &-doctor {
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+            opacity: 1 !important;
+        }
+    }
 }
 
 
