Google maps tidy up

--- a/resources/sass/components/basic/_modal.scss
+++ b/resources/sass/components/basic/_modal.scss
@@ -90,6 +90,10 @@
         .modal-content {
             padding: 25px;
         }
+
+        #map {
+            min-height: 400px;
+        }
     }
 }
 
