'No data' to replace dashes

--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -148,6 +148,11 @@
     line-height: 19px;
 }
 
+@mixin font-size($sizeValue: 1.6) {
+    font-size: ($sizeValue * 10) + px;
+    font-size: $sizeValue + rem;
+}
+
 //Header section
 @mixin headerHeight {
     height:75px;
