--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -2,10 +2,10 @@
 .popover {
     /* Style for "For privat" */
     color: $black;
-    font-size: 10px;
+    @include font-size(14);
     font-weight: 400;
     letter-spacing: -0.5px;
-    line-height: 10.2px;
+    line-height: 1;
     //box-shadow: 0 0 5px rgba(0, 0, 0, 0.16);
     border-radius: 15px;
     border: none;
