--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -257,7 +257,9 @@
         text-align: center;
 
         span {
-            font-size: 12px;
+            @include font-size(14);
+            display: inline-block;
+            margin-top: 10px;
             line-height: 1;
         }
 
