- Add in top level categories to dropdown search results

--- a/resources/sass/components/basic/_select.scss
+++ b/resources/sass/components/basic/_select.scss
@@ -51,6 +51,12 @@
     + span {
         pointer-events: none;
     }
+
+    .dropdown-menu {
+        .suboption {
+            padding-left: 50px;
+        }
+    }
 }
 
 .results-page {
