--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -237,7 +237,7 @@
             /* Style for "Consultant" */
             height: 20px;
             line-height: 20px;
-            font-size: 12px;
+            @include font-size(14);
 
             letter-spacing: -0.6px;
             padding: 0 20px 0 12px;
@@ -260,7 +260,7 @@
             color: $white;
             height: 20px;
             line-height: 20px;
-            font-size: 12px;
+            @include font-size(14);
             letter-spacing: -0.6px;
             padding: 0 20px 0 12px;
 
@@ -287,7 +287,7 @@
             color: $white;
             height: 20px;
             line-height: 20px;
-            font-size: 12px;
+            @include font-size(14);
             letter-spacing: -0.6px;
             padding: 0 20px 0 12px;
             background: linear-gradient(90deg, #003a5d, #003a5d, #00bcb4, #00bcb4);
@@ -320,7 +320,7 @@
         &.btn-enquire {
             border-radius: 10px;
             color: $white !important;
-            font-size: 12px;
+            @include font-size(14);
             letter-spacing: -0.7px;
             line-height: 13px;
             height: 40px;
@@ -351,7 +351,7 @@
             border-radius: 10px;
             background: $white;
             color: $pink;
-            font-size: 12px;
+            @include font-size(14);
 
             letter-spacing: -0.7px;
             line-height: 13px;
