Private enquiry form reworked

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -21,7 +21,8 @@
     // Hide filters on pageload
     #resultspage_form {
         .filter-parent {
-            //display: none;
+            display: none;
+            
             .dropdown-toggle {
                 @include font-size(14);
             }
