--- a/resources/sass/components/basic/_range.scss
+++ b/resources/sass/components/basic/_range.scss
@@ -1,10 +1,10 @@
 .rangeParent {
     width: 100%;
-    @include flex;
-    flex: 1;
-    align-items: center;
+    //@include flex;
+    //flex: 1;
+    //align-items: center;
     @include media-breakpoint-up(md) {
-        padding-left: 70px;
+        //padding-left: 70px;
     }
 
     label {
@@ -16,9 +16,9 @@
     }
 }
 
-#radiusProx {
-    margin-left: 30px;
-}
+//#radiusProx {
+//    margin-left: 30px;
+//}
 
 .currentRadius {
     position: absolute;
@@ -29,5 +29,47 @@
     font-weight: 500;
     letter-spacing: -0.35px;
     line-height: 16.8px;
+}
+
+// Labels below slider
+.range-labels {
+    //margin: 18px -41px 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+
+    li {
+        position: relative;
+        width: percentage(1/7);
+        text-align: center;
+        color: #b2b2b2;
+        font-size: 14px;
+        cursor: pointer;
+
+        &::before {
+            position: absolute;
+            top: -25px;
+            right: 0;
+            left: 0;
+            content: "";
+            margin: 0 auto;
+            width: 9px;
+            height: 9px;
+            background: #b2b2b2;
+            border-radius: 50%;
+        }
+    }
+
+    .active {
+        color: #37adbf;
+    }
+
+    .selected::before {
+        background: #37adbf;
+    }
+
+    .active.selected::before {
+        display: none;
+    }
 }
 
