--- a/resources/sass/components/basic/_rangeStyle.scss
+++ b/resources/sass/components/basic/_rangeStyle.scss
@@ -38,7 +38,8 @@ $range-label-width: 60px !default;
 
 .range-slider__range {
     -webkit-appearance: none;
-    width: calc(100% - (#{$range-label-width + 13px}));
+    width: 100%;
+    //width: calc(100% - (#{$range-label-width + 13px}));
     height: $range-track-height;
     border-radius: 0;
     background: $range-track-color;
