--- a/resources/sass/components/basic/_rangeStyle.scss
+++ b/resources/sass/components/basic/_rangeStyle.scss
@@ -1,4 +1,5 @@
 // https://codepen.io/nosurprisethere/pen/KJxwQz
+//http://danielstern.ca/range.css/#/ - not used here, but useful
 
 // Base Colors
 $shade-10: #1b70f3 !default;
