--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -62,10 +62,10 @@
         }
     }
 
-    .results-page-select {
+    .results-page-select,
+    .dropdown-toggle {
         padding: 10px 40px 10px 13px;
         background-color: $white;
-        /* Style for "Knee Opera" */
         color: $darkerGrey;
         @include font-size(14);
         font-weight: 500;
@@ -77,7 +77,7 @@
         width: $fullWidth;
         background-color: $white;
         padding-top: 23px;
-        //display: none;
+        display: none;
     }
 
     .postcode-proximity,
