--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -44,7 +44,7 @@
 
     .select-parent {
         position: relative;
-        width: 100%;
+        //width: 100%;
 
         label {
             font-size: 14px;
@@ -68,9 +68,8 @@
         background-color: $white;
         color: $darkerGrey;
         @include font-size(14);
-        font-weight: 500;
         letter-spacing: -0.6px;
-        line-height: 15px;
+        line-height: 17px;
     }
 
     .filter-parent {
@@ -109,9 +108,9 @@
         background-color: $lighterGrey;
     }
 
-    #sort_parent {
-        display: none;
-    }
+    //#sort_parent {
+    //    display: none;
+    //}
 
     .sort-bar {
         min-height: 60px;
