Fix select button issue

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -428,7 +428,7 @@
             color: $white;
             height: 40px;
             line-height: 13px;
-            min-width: 160px;
+            //min-width: 160px;
 
             &:before {
                 background-image: url('../images/icons/special.svg');
