--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -2,18 +2,34 @@
 .test-page {
     margin-bottom: 49px;
 
-    .filter-section {
-        flex-basis: 85%;
+    .filter {
         display: flex;
 
+        .filter-left {
+            //flex-basis: 80.3333%;
+            width: 80.3333%;
+        }
+
+        .filter-right {
+            //flex-basis: 1.6666%;
+            width: 19.6666%;
+        }
+    }
+
+    $col-spacing: 18px;
+
+    .filter-section {
+        //flex-basis: 85%;
+        display: flex;
+        margin-left: -$col-spacing;
+        margin-right: -$col-spacing;
+
         .filter-section-child {
-            flex: 1;
-            padding: 0 20px;
+            flex: 0 0 20%;
+            width: 20%;
+            padding: 0 $col-spacing;
             &:not(:last-child) {
                 border-right: 2px solid #d7d7d7;
-            }
-            &:first-child {
-                margin-left: -20px;
             }
         }
     }
@@ -32,7 +48,7 @@
     .submit-section {
         display: flex;
         justify-content: flex-end;
-        flex-basis: 15%;
+        //flex-basis: 15%;
 
         .submit-section-child {
             justify-content: flex-end;
@@ -87,7 +103,7 @@
     .postcode-proximity-child,
     .submit-section-child,
     .filter-section-child {
-        @include uniformAlignment;
+        //@include uniformAlignment;
         position: relative;
         margin-bottom: 20px;
         display: flex;
