--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -121,4 +121,23 @@ $container-max-widths: (
     md: 720px,
     lg: 960px,
     xl: 1200px
-)
+);
+
+// Base Colors for range slider
+$shade-10: #1b70f3 !default;
+$shade-1: #d7dcdf !default;
+$shade-0: #fff !default;
+$teal: #1abc9c !default;
+
+// Range Slider
+$range-width: 100% !default;
+
+$range-handle-color: $shade-10 !default;
+$range-handle-color-hover: $teal !default;
+$range-handle-size: 22px !default;
+
+$range-track-color: $shade-1 !default;
+$range-track-height: 4px !default;
+
+$range-label-color: $shade-10 !default;
+$range-label-width: 60px !default;
