Set default bg gradient on range slider on page load

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -127,7 +127,8 @@ $col-spacing: 18px;
         margin-right: -$col-spacing;
 
         .postcode-proximity-child {
-            padding: $col-spacing;
+            padding-left: $col-spacing;
+            padding-right: $col-spacing;
 
             &:first-child {
                 width: 40%;
