--- a/resources/sass/components/basic/_range.scss
+++ b/resources/sass/components/basic/_range.scss
@@ -2,7 +2,6 @@
     width: 100%;
     height: 100%;
     position: relative;
-    padding-top: 30px;
     padding-left: 150px;
 
     label {
@@ -11,11 +10,6 @@
         left: 0;
     }
 
-    // The range slider
-    input {
-        flex: 1;
-        z-index: 5;
-    }
 
     .currentRadius {
         position: absolute;
@@ -26,11 +20,18 @@
     input,
     .range-labels {
         position: absolute;
-        bottom: 0;
         width: 100%;
     }
 
+    // The range slider
+    input {
+        top: 32px;
+        flex: 1;
+        z-index: 5;
+    }
+
     .range-labels {
+        top: 0;
         padding: 0 $range-handle-size/2;
         pointer-events: none;
     }
@@ -58,15 +59,15 @@
     display: flex;
     position: absolute;
 
-
     li {
         position: relative;
         display: inline-block;
         width: calc(calc(100% - #{$range-handle-size}) / 6);
         flex: calc(calc(100% - #{$range-handle-size}) / 6);
         text-align: center;
-        color: #b2b2b2;
+        color: $teal;
         @include font-size(14);
+        @extend .SofiaPro-Bold;
         cursor: pointer;
 
         &::before {
@@ -76,9 +77,9 @@
             left: 0;
             content: "";
             margin: 0 auto;
-            width: 2px;
-            height: 10px;
-            background: #d7d7d7;
+            width: 5px;
+            height: 21px;
+            background-color: #ebebeb;
         }
 
         &:first-child {
@@ -101,5 +102,24 @@
     //.active.selected::before {
     //    display: none;
     //}
+}
+
+.range-wrapper {
+    .track-mask {
+        position: absolute;
+        background-color: #fff;
+        z-index: 5;
+        width: 10px;
+        height: 20px;
+        bottom: 20px;
+
+        &__start {
+            left: 0;
+        }
+
+        &__end {
+            right: 0;
+        }
+    }
 }
 
