--- a/resources/sass/components/basic/_rangeStyle.scss
+++ b/resources/sass/components/basic/_rangeStyle.scss
@@ -28,7 +28,7 @@
     //width: calc(100% - (#{$range-label-width + 13px}));
     height: $range-track-height;
     border-radius: 0;
-    background: $range-track-color;
+    background: linear-gradient(90deg, white 9.9px, rgb(235, 235, 235) 10px, rgb(235, 235, 235) calc(100% - 10px), white calc(100% - 9.9px));
     outline: none;
     padding: 0;
     margin: 0;
@@ -42,6 +42,7 @@
         background: $range-handle-color;
         cursor: pointer;
         transition: background .15s ease-in-out;
+
 
         //&:hover {
         //    background: $range-handle-color-hover;
