Translate range to right to compensate for overhang

--- a/resources/sass/components/basic/_range.scss
+++ b/resources/sass/components/basic/_range.scss
@@ -112,6 +112,9 @@
 }
 
 .range-wrapper {
+    // Move right to compensate for 'overhang'
+    transform: translateX(10px);
+
     .track-mask {
         position: absolute;
         background-color: #fff;
