FAQ page layout column fix

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -33,6 +33,7 @@
 @import 'pages/homePage';
 @import 'pages/resultsPage';
 @import 'pages/content';
+@import 'pages/faqsPage';
 
 // PAGE SECTION
 @import 'pages/pagesections/howSection';
