--- a/resources/sass/pages/_content.scss
+++ b/resources/sass/pages/_content.scss
@@ -19,52 +19,7 @@
         }
     }
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        @extend .font-semibold;
-    }
 
-    h1 {
-        font-size: 36px;
-        margin: 0 0 30px 0;
-    }
-
-    h2 {
-        font-size: 28px;
-        color: $teal;
-        margin: 0 0 28px 0;
-    }
-
-    h3 {
-        font-size: 24px;
-        margin: 0 0 24px 0;
-    }
-
-    h4 {
-        font-size: 24px;
-        color: $teal;
-        margin: 0 0 24px 0;
-    }
-
-    h5 {
-        font-size: 22px;
-        color: $pink;
-        margin: 0 0 22px 0;
-    }
-
-    h6 {
-        font-size: 22px;
-        margin: 0 0 22px 0;
-    }
-
-    p {
-        font-size: 20px;
-        margin: 0 0 20px 0;
-    }
 
     em {
         color: $blue;
@@ -194,4 +149,77 @@ ul.blue-dot {
             border-radius: 50%;
         }
     }
+}
+
+//@mixin font-source-sans(
+// $family: false,
+// $size: false,
+// $colour: false,
+// $weight: false,
+// $lh: false,
+// $ls: false) {
+//    @if $family { font-family: $family, Helvetica, Arial, sans-serif; }
+//    @if $size { font-size: $size; }
+//    @if $colour { color: $colour; }
+//    @if $weight { font-weight: $weight; }
+//    @if $lh { line-height: $lh; }
+//    @if $ls { letter-spacing: $ls; }
+//}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    //@extend .font-semibold;
+}
+
+h1 {
+    @include font-style('SofiaPro-Black', 45px, false, false, 1.25, -2.25px);
+    //margin: 0 0 30px 0;
+}
+
+h2 {
+    @include font-style('SofiaPro-Bold', 28px, false, false, 1.25, -2.25px);
+    margin: 0 0 28px 0;
+
+    &.teal {
+        color: $teal;
+    }
+}
+
+.section-title {
+    @include font-style('SofiaPro-Bold', 40px, false, false, 1.2, -2px);
+}
+
+.page-subtitle {
+    @include font-style('SofiaPro-SemiBold', 28px, false, false, calc(35/$size), -1.45px);
+}
+
+h3 {
+    font-size: 24px;
+    margin: 0 0 24px 0;
+}
+
+h4 {
+    font-size: 24px;
+    color: $teal;
+    margin: 0 0 24px 0;
+}
+
+h5 {
+    font-size: 22px;
+    color: $pink;
+    margin: 0 0 22px 0;
+}
+
+h6 {
+    font-size: 22px;
+    margin: 0 0 22px 0;
+}
+
+p {
+    font-size: 20px;
+    margin: 0 0 20px 0;
 }
