--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -129,29 +129,25 @@
 
 // Fonts
 
-@mixin font($weight) {
-    @if $weight=="regular" {
-        font-family: Sailec-regular;
-    }
-    @if $weight=="medium" {
-        font-family: Sailec-medium;
-    }
-    @if $weight=="bold" {
-        font-family: Sailec-bold;
-    }
-}
-
-@mixin font-standard {
-    font-size: 18px;
-    font-weight: 500;
-    letter-spacing: -0.9px;
-    line-height: 19px;
-}
 
 @mixin font-size($sizeValue: 1.6) {
     font-size: ($sizeValue * 10) + px;
     font-size: $sizeValue + rem;
 }
+
+
+/**
+     * @param $family
+*/
+@mixin font-style($family: 'SofiaPro-Regular', $size: false, $colour: false, $weight: false,  $lh: false, $ls: false) {
+    @if $family { font-family: $family, Helvetica, Arial, sans-serif; }
+    @if $size { @include font-size($size); }
+    @if $colour { color: $colour; }
+    @if $weight { font-weight: $weight; }
+    @if $lh { line-height: $lh; }
+    @if $ls { letter-spacing: $ls; }
+}
+
 
 //Header section
 @mixin headerHeight {
@@ -205,30 +201,6 @@
     }
     -webkit-justify-content: $value;
     justify-content: $value;
-}
-
-@mixin uniformAlignment {
-    flex: 1 1 0;
-    -webkit-flex: 1 1 0;
-    -ms-flex: 1 1 100px;
-}
-
-@mixin twoOneRatio {
-    flex: 2 1 0;
-    -webkit-flex: 2 1 0;
-    -ms-flex: 2 1 100px;
-}
-
-@mixin threeOneRatio {
-    flex: 2 1 0;
-    -webkit-flex: 2 1 0;
-    -ms-flex: 2 1 100px;
-}
-
-@mixin flexBasis{
-    flex: 0 0 45%;
-    -webkit-flex: 0 0 45%;
-    -ms-flex: 0 0 45%;
 }
 
 // Absolute centring
