--- a/resources/sass/pages/_faqsPage.scss
+++ b/resources/sass/pages/_faqsPage.scss
@@ -1,5 +1,32 @@
 .faqs-page {
-    .container-fluid {
-        max-width: 980px;
+    .input-wrapper {
+        svg {
+            left: 35px;
+        }
+    }
+
+    input.faq-search-input {
+        border: 3px solid $teal !important;
+        height: 80px;
+        line-height: 80px;
+        border-radius: 40px !important;
+        padding-left: 90px;
+        padding-right: 45px;
+        @include font-style(false, 32px, false, false, 44px, -1.6px);
+
+        @include placeholder {
+            @include font-style(false, 32px, false, false, 44px, -1.6px);
+        }
+    }
+
+    // The cross icon to clear input
+    ::-webkit-search-cancel-button {
+        position: relative;
+        right: -10px;
+        appearance: none;
+        height: 30px;
+        width: 30px;
+        content: url('/images/icons/times-solid.svg');
     }
 }
+
