--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -33,7 +33,7 @@ $aqua: #00cecd;
 $darkerAqua: #00b5b4;
 $lightGrey: $darkestWhite;
 $lighterGrey: #ececec;
-$lighestGrey: #1b1b1b;
+$lightestGrey: #1b1b1b;
 $darkerGrey: #1c1c1c;
 $sunnyYellow: #fff568;
 $footerGrey: #363636;
@@ -49,7 +49,7 @@ $borderGrey: #d7d7d7;
 
 // Body
 $body-bg: #fff;
-$body-color: $darkerGrey;
+$body-color: $lightestGrey;
 
 // Full width
 $fullWidth: 100%;
