--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -81,6 +81,7 @@ select::-ms-expand {
     select {
         flex: 0 0 50%;
         padding: 12px 100px 12px 16px;
+        @include font-style('SofiaPro-Medium', 18px, false, false, 20px, -0.9px);
     }
 
     &:after {
