--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -255,6 +255,7 @@ $col-spacing: 18px;
             letter-spacing: -0.7px;
             line-height: 16.8px;
             text-align: center;
+            flex: 1;
 
             span.sort-arrow {
                 position: absolute;
