--- a/resources/sass/pages/_content.scss
+++ b/resources/sass/pages/_content.scss
@@ -2,7 +2,8 @@
 .privacy-page,
 .terms-and-conditions-page,
 .faqs-page,
-.your-rights-page {
+.your-rights-page,
+.about-us-page {
     main {
         padding-top: 40px;
     }
