--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -286,7 +286,6 @@ $col-spacing: 18px;
     .sort-categories-section-2__child {
         flex: 1;
         @include flex-center;
-        /* Style for "5.3 Weeks" */
         font-size: 16px;
         font-weight: 400;
         letter-spacing: -0.8px;
@@ -301,6 +300,7 @@ $col-spacing: 18px;
         }
 
         p {
+            @include font-size(16px);
             margin-bottom: 0;
         }
     }
@@ -350,12 +350,10 @@ $col-spacing: 18px;
     }
 
     .nhs-hospital {
-
         border-bottom: solid 30px $darkBlue;
         border-right: solid 30px $darkBlue;
         border-left: solid 30px transparent;
         border-top: solid 30px transparent;
-
     }
 
     .private-hospital {
