Change results page form to BS layout and add hover state on map button. Add dropdown for insurance providers.

--- a/resources/sass/components/basic/_select.scss
+++ b/resources/sass/components/basic/_select.scss
@@ -58,7 +58,8 @@
     .filter-section {
         .dropdown-toggle,
         .results-page-select {
-            max-width: 158px;
+            //max-width: 158px;
+
             option {
                 background-color: $white !important;
             }
