--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -5,30 +5,30 @@ $col-spacing: 18px;
     margin-bottom: 49px;
 
     .filter {
-        display: flex;
-
-        .filter-left {
-            //flex-basis: 80.3333%;
-            width: 80.3333%;
-        }
-
-        .filter-right {
-            //flex-basis: 1.6666%;
-            width: 19.6666%;
-        }
+        //display: flex;
+        //
+        //.filter-left {
+        //    //flex-basis: 80.3333%;
+        //    width: 80.3333%;
+        //}
+        //
+        //.filter-right {
+        //    //flex-basis: 1.6666%;
+        //    width: 19.6666%;
+        //}
     }
 
 
     .filter-section {
         //flex-basis: 85%;
-        display: flex;
-        margin-left: -$col-spacing;
-        margin-right: -$col-spacing;
+        //display: flex;
+        //margin-left: -$col-spacing;
+        //margin-right: -$col-spacing;
 
         .filter-section-child {
-            flex: 0 0 20%;
-            width: 20%;
-            padding: 0 $col-spacing;
+            //flex: 0 0 20%;
+            //width: 20%;
+            //padding: 0 $col-spacing;
 
             &:not(:last-child) {
                 border-right: 2px solid #d7d7d7;
