Range slider alignment

--- a/resources/sass/components/basic/_range.scss
+++ b/resources/sass/components/basic/_range.scss
@@ -113,7 +113,7 @@
 
 .range-wrapper {
     // Move right to compensate for 'overhang'
-    transform: translateX(10px);
+    //transform: translateX(10px);
 
     //.track-mask {
     //    position: absolute;
