--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -24,6 +24,8 @@
 
     &-regular {
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.16);
+        // Stop the flickering effect on hover of popover trigger
+        pointer-events: none;
 
         .arrow {
             background-image: url('../images/speech-point-small.svg');
