--- a/resources/sass/components/basic/_specialOfferSlide.scss
+++ b/resources/sass/components/basic/_specialOfferSlide.scss
@@ -39,6 +39,15 @@
         opacity: 1 !important;
     }
 
+    .special-offer-title {
+        @include font-style('SofiaPro-Medium', 22px, false, false, 19.2px, -1.1px);
+        margin-bottom: 0.4rem;
+    }
+
+    .special-offer-copy {
+        @include font-style('SofiaPro-Regular', 15px, false, false, 19.2px, -0.75px);
+    }
+
     ul {
         width: 80%;
         border-left: 1px solid #fff;
