--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -138,7 +138,7 @@ select::-ms-expand {
         }
     }
 
-    // Boostrap select button
+    // bootstrap select button
     .dropdown-toggle {
         height: 44px;
     }
