--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -34,6 +34,7 @@
 @import 'pages/resultsPage';
 @import 'pages/content';
 @import 'pages/faqsPage';
+@import 'pages/404';
 
 // PAGE SECTION
 @import 'pages/pagesections/howSection';
