--- a/resources/sass/pages/_faqsPage.scss
+++ b/resources/sass/pages/_faqsPage.scss
@@ -1,4 +1,9 @@
 .faqs-page {
+    .hl { // The highlighted span for search terms in results
+        @extend .bg-teal;
+        @extend .text-white;
+    }
+
     .input-wrapper {
         svg {
             left: 35px;
@@ -8,14 +13,14 @@
     input.faq-search-input {
         border: 3px solid $teal !important;
         height: 80px;
-        line-height: 80px;
+        //line-height: 80px;
         border-radius: 40px !important;
         padding-left: 90px;
         padding-right: 45px;
-        @include font-style(false, 32px, #000, false, 44px, -1.6px);
+        @include font-style(false, 32px, #000, false, false, -1.6px);
 
         @include placeholder {
-            @include font-style(false, 32px, #000, false, 44px, -1.6px);
+            @include font-style(false, false, #000, false, false, -1.6px);
         }
     }
 
