--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -218,11 +218,13 @@
     color: $white;
     width: 340px;
 
-    &.nhs-hospital__offer {
+    &.nhs-hospital__offer,
+    &.purple__offer {
         background-image: linear-gradient(264deg, #1b71f3 0%, #8f00ff 0%, #a346ec 52%, #b687db 100%);
     }
 
-    &.private-hospital__offer {
+    &.private-hospital__offer,
+    &.pink__offer {
         background-image: linear-gradient(249deg, #1b71f3 0%, #ed0373 0%, #cc6d9b 100%);
     }
 
