--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -217,20 +217,24 @@
 .special-offer-tab {
     color: $white;
     width: 340px;
+    background-size: 200% !important;
+    background-position: left !important;
 
     &.nhs-hospital__offer,
     &.purple__offer {
-        background-image: linear-gradient(264deg, #1b71f3 0%, #8f00ff 0%, #a346ec 52%, #b687db 100%);
+        //background-image: linear-gradient(264deg, #1b71f3 0%, #8f00ff 0%, #a346ec 52%, #b687db 100%);
+        background: linear-gradient(264deg, #8e00fe,#1b71f3,#8e00fe);
     }
 
     &.private-hospital__offer,
     &.pink__offer {
-        background-image: linear-gradient(249deg, #1b71f3 0%, #ed0373 0%, #cc6d9b 100%);
+        //background-image: linear-gradient(249deg, #1b71f3 0%, #ed0373 0%, #cc6d9b 100%);
+        background: linear-gradient(249deg, #ed0373,#8e00fe,#ed0373);
     }
 
     //width: 300px;
     border-radius: 10px 10px 0 0;
-    font-size: 18px;
+    @include font-size(18);
     font-weight: 500;
     letter-spacing: -0.9px;
 
@@ -246,15 +250,18 @@
             max-width: 200px;
 
             .offer-title {
-                font-size: 18px;
+                @include font-size(18);
             }
 
             .offer-subtitle {
-                font-size: 14px;
+                @include font-size(14);
             }
         }
 
         .open-text {
+            .hospital-name {
+                @include font-size(18);
+            }
             display: none;
         }
 
