--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -195,8 +195,8 @@
         ul {
             li {
                 list-style: none;
-                font-size: 13px;
-                line-height: 2;
+                @include font-size(16);
+                //line-height: 2;
                 font-weight: 400;
                 letter-spacing: -0.65px;
                 position: relative;
@@ -217,19 +217,21 @@
 .special-offer-tab {
     color: $white;
     width: 340px;
-    background-size: 200% !important;
-    background-position: left !important;
+    background-size: 200%;
+    background-position: left;
+    min-height: 0;
+    transition: min-height ease 0.4s, background-position ease 0.3s;
 
     &.nhs-hospital__offer,
     &.purple__offer {
-        //background-image: linear-gradient(264deg, #1b71f3 0%, #8f00ff 0%, #a346ec 52%, #b687db 100%);
-        background: linear-gradient(264deg, #8e00fe,#1b71f3,#8e00fe);
+        background-image: linear-gradient(264deg, #1b71f3 0%, #8f00ff 0%, #a346ec 52%, #b687db 100%);
+        //background: linear-gradient(264deg, #8e00fe,#1b71f3,#8e00fe);
     }
 
     &.private-hospital__offer,
     &.pink__offer {
+        background-image: linear-gradient(249deg, #8e00fe,#1b71f3);
         //background-image: linear-gradient(249deg, #1b71f3 0%, #ed0373 0%, #cc6d9b 100%);
-        background: linear-gradient(249deg, #ed0373,#8e00fe,#ed0373);
     }
 
     //width: 300px;
@@ -293,6 +295,8 @@
 
     // Spin arrow when open
     &.open {
+        background-position: right;
+
         .special-offer-header svg {
             transform: rotate3d(0, 0, 1, 180deg);
         }
@@ -310,6 +314,7 @@
 .special-offer-body {
     padding: 0 25px 25px 80px;
     display: none;
+    height: 200px;
 
     .offer-price {
         min-height: 30px;
