--- a/resources/sass/components/basic/_specialOfferSlide.scss
+++ b/resources/sass/components/basic/_specialOfferSlide.scss
@@ -54,7 +54,7 @@
 
         li {
             list-style: none;
-            font-size: 13px;
+            @include font-size(14);
             line-height: 2;
             font-weight: 400;
             letter-spacing: -0.65px;
